added data to recycler. added font styleing in adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
 	<string name="app_name">ImageViewer</string>
+	<string name="title_heading">Title: </string>
+	<string name="name_heading">Name: </string>
+	<string name="id_heading">ID: </string>
 </resources>
