--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 	<string name="title_heading">Title: </string>
 	<string name="name_heading">Name: </string>
 	<string name="id_heading">ID: </string>
+	<string name="loading">Loading...</string>
+	<string name="error_loading">Error loading data from server?</string>
 </resources>
