--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 	<string name="email_hint">Email</string>
 	<string name="login_txt">Login</string>
 	<string name="login_failed">Login failed. please try again!</string>
+	<string name="invalid_email_error">please use valid email</string>
 </resources>
