--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 	<string name="login_txt">Login</string>
 	<string name="login_failed">Login failed. please try again!</string>
 	<string name="invalid_email_error">please use valid email</string>
+	<string name="selection_title">Selection</string>
 </resources>
